--- a/blog/templates/blog/article/includes/related_area.html
+++ b/blog/templates/blog/article/includes/related_area.html
@@ -1,5 +1,5 @@
 <div class="widget widget-recent">
-    <h3 class="section-title title-bar-primary">Related Posts</h3>
+    <h3 class="section-title title-bar-primary">Əlaqəli Məqalələr</h3>
     {% for related in article.related_articles %}
         <div class="media">
             <a href="{{ related.get_absolute_url }}">
