--- a/blog/templates/blog/article/includes/share_area.html
+++ b/blog/templates/blog/article/includes/share_area.html
@@ -1,5 +1,5 @@
 <div id="share-section" class="blog-social">
-    <h3>Share This Post:</h3>
+    <h3>Məqaləni Paylaş:</h3>
     <ul>
         <li class="facebook">
             <a id="fb-share-button" href="#"><i class="fab fa-facebook-square"></i>facebook</a>
