--- a/campaign/templates/campaign/campaign_detail/includes/detail_area.html
+++ b/campaign/templates/campaign/campaign_detail/includes/detail_area.html
@@ -25,9 +25,9 @@
             <form id="cart-quantity">
                 <ul class="cart-quantity">
                     <li>
-                        <a href="#" class="item-btn" style="letter-spacing: 2px">
+                        <a href="tel:994773034114" class="item-btn" style="letter-spacing: 2px">
                             <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span class="ml-2">+994-51-888-33-13</span>
+                            <span class="ml-2">(+994)-77-303-41-14</span>
                         </a>
                     </li>
                 </ul>
