--- a/campaign/templates/campaign/campaign_detail/includes/others_area.html
+++ b/campaign/templates/campaign/campaign_detail/includes/others_area.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="widget widget-top-rated">
-    <h3 class="section-title title-bar-primary">Related Products</h3>
+    <h3 class="section-title title-bar-primary">Digər Kampaniyalar</h3>
     <ul>
         {% for other in campaign.get_other_campaigns %}
             <li class="media">
