--- a/campaign/templates/campaign/campaign_list/includes/search_area.html
+++ b/campaign/templates/campaign/campaign_list/includes/search_area.html
@@ -1,7 +1,7 @@
 <div class="widget widget-search">
-    <h3 class="section-title title-bar-primary">Search Keywords</h3>
+    <h3 class="section-title title-bar-primary">Axtarış</h3>
     <form class="input-group stylish-input-group" action="{% url 'campaign-list' %}" method="get">
-        <input name="search" type="text" class="form-control" placeholder="Search Here . . .">
+        <input name="search" type="text" class="form-control" placeholder="Axtardığınız sözü yazın">
         <span class="input-group-addon">
             <button type="submit">
                 <span class="flaticon-search" aria-hidden="true" type="submit"></span>
