--- a/departament/templates/departament/departament_list/departament_list.html
+++ b/departament/templates/departament/departament_list/departament_list.html
@@ -24,8 +24,8 @@
     <section class="call-to-action-wrap-layout2 bg-common parallaxie" data-bg-image="img/figure/figure4.jpg">
         <div class="container">
             <div class="call-to-action-box-layout2">
-                <h2>We Provide the highest level of satisfaction<span> care &amp; services to our patients.</span></h2>
-                <a href="{% url 'appointment' %}" class="item-btn">Make an Appointment</a>
+                <h2>Şöbələrimizdə xəstələrimizə ən yüksək səviyyədə<span>tibbi xidməti təmin edirik.</span></h2>
+                <a href="{% url 'appointment' %}" class="item-btn">Onlayn Randevu</a>
             </div>
         </div>
     </section>
