--- a/doctor/templates/doctor/doctor_detail/includes/education_area.html
+++ b/doctor/templates/doctor/doctor_detail/includes/education_area.html
@@ -1,12 +1,12 @@
 <div class="single-item">
     <div class="table-responsive">
-        <h3 class="section-title title-bar-primary2">Education:</h3>
+        <h3 class="section-title title-bar-primary2">Təhsil:</h3>
         <table class="table">
             <thead>
                 <tr>
-                    <th>Year</th>
-                    <th>Degree</th>
-                    <th>Institute</th>
+                    <th>İl</th>
+                    <th>Sahə</th>
+                    <th>Təhsil Müəssisəsi</th>
                 </tr>
             </thead>
             <tbody>
@@ -17,16 +17,6 @@
                         <td>{{ education.place }}</td>
                     </tr>
                 {% endfor %}
-                {% comment %} <tr>
-                    <td>2006</td>
-                    <td>MBBS, M.D</td>
-                    <td>University of Wyoming</td>
-                </tr>
-                <tr>
-                    <td>2010</td>
-                    <td>M.D. of Medicine</td>
-                    <td>Netherland Medical College</td>
-                </tr> {% endcomment %}
             </tbody>
         </table>
     </div>
