--- a/doctor/templates/doctor/doctor_detail/includes/personal_info_area.html
+++ b/doctor/templates/doctor/doctor_detail/includes/personal_info_area.html
@@ -1,9 +1,9 @@
 <div class="widget widget-team-contact">
-    <h3 class="section-title title-bar-primary2">Personal Info</h3>
+    <h3 class="section-title title-bar-primary2">Əlaqə</h3>
     <ul>
         <li>Phone:<span>{{ doctor.phone}}</span></li>
         <li>E-mail:<span>{{ doctor.email }}</span></li>
-        <li class="d-flex">Social:
+        <li class="d-flex">Sosial Şəbəkələr:
             <ul class="widget-social">
                 
                 {% if doctor.facebook %}
