--- a/doctor/templates/doctor/doctor_detail/includes/schedule_area.html
+++ b/doctor/templates/doctor/doctor_detail/includes/schedule_area.html
@@ -1,11 +1,11 @@
 <div class="single-item">
     <div class="table-responsive">
-        <h3 class="section-title title-bar-primary2">Appointmnet Schedules:</h3>
+        <h3 class="section-title title-bar-primary2">Randevu Təqvimi:</h3>
         <table class="table schedule-table">
             <thead>
                 <tr>
-                    <th>Day</th>
-                    <th>Time</th>
+                    <th>Gün</th>
+                    <th>Saat</th>
                     <th></th>
                 </tr>
             </thead>
@@ -20,7 +20,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=1&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -35,7 +35,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=2&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -50,7 +50,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=3&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -65,7 +65,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=4&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -80,7 +80,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=5&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -95,7 +95,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=6&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
@@ -110,7 +110,7 @@
                                     <a 
                                         href="{% url 'appointment' %}?weekday=7&departament={{ doctor.departament.slug }}&doctor={{ doctor.slug }}" 
                                         class="item-btn">
-                                        Appointment
+                                        Randevu Al
                                     </a>
                                 </td>
                             </tr>
