--- a/doctor/templates/doctor/doctor_list/includes/search_area.html
+++ b/doctor/templates/doctor/doctor_list/includes/search_area.html
@@ -20,13 +20,13 @@
             </div>
             <div class="col-xl-6">
                 <div class="form-group">
-                    <input class="doctor-name form-control" type="text" placeholder="Type Doctor Name Here ..."
+                    <input class="doctor-name form-control" type="text" placeholder="Həkimin Adını Qeyd Edin"
                         name="name" value="">
                 </div>
             </div>
             <div class="col-xl-2">
                 <div class="form-group">
-                    <button type="submit" class="item-btn">Search</button>
+                    <button type="submit" class="item-btn">Axtar</button>
                 </div>
             </div>
         </div>
