--- a/templates/layouts/main_layout/includes/footer.html
+++ b/templates/layouts/main_layout/includes/footer.html
@@ -11,14 +11,13 @@
                             <a href="index.html"><img src="{% static 'general/base/img/footerlogo.png' %}" class="img-fluid" alt="footer-logo"></a>
                         </div>
                         <div class="footer-about">
-                            <p>We are ipsum dolor sit amet aeeatt consectetuer adipiscing elitseder diam
-                                nonummy.
+                            <p>Peşəkar həkim heyətilə sizlərə sağlamlığınızla əlaqədar hər növ xidməti verməyə hazırıq.
                             </p>
                         </div>
                         <div class="footer-contact-info">
                             <ul>
-                                <li><i class="fas fa-map-marker-alt"></i>59 Street, 1200 Techpark</li>
-                                <li><i class="fas fa-phone"></i>+59888555</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Bakı şəhəri, 9-cu mikrorayon., Mir Cəlal küç., 51 C</li>
+                                <li><i class="fas fa-phone"></i>(+994)-77-303-41-14</li>
                                 <li><i class="far fa-envelope"></i>medilink@gmail.com</li>
                             </ul>
                         </div>
@@ -86,9 +85,10 @@
             </ul>
         </div>
     </section>
-    <section class="footer-bottom-wrap">
-        <div class="copyright">Copyright @ 2018 medilink. All Rights Reserved.<a href="https://www.radiustheme.com">
-                RadiusTheme</a></div>
+    <section class="footer-bottom-wrap d-block pt-1">
+        <div class="copyright text-white">Bütün hüquqları qorunur © www.elmed.az <script>document.write(new Date().getFullYear())</script></a></div>
+        <div class="text-white">Developed by <b>Cavad Salman</b></div>
+        <div class="text-white">Content by "R.G Company MMC"</div>
     </section>
 </footer>
 <!-- Footer Area End Here -->
