--- a/templates/pages/about/about.html
+++ b/templates/pages/about/about.html
@@ -22,7 +22,7 @@
 {% block body %}
     {% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə" name="Haqqımızda" %}
     {% include 'pages/about/includes/info_area.html' %}
-    {% include 'pages/about/includes/qa_area.html' %}
+    {% comment %} {% include 'pages/about/includes/qa_area.html' %} {% endcomment %}
 {% endblock body %}
 
 {% block scripts %}
