--- a/templates/pages/about/includes/info_area.html
+++ b/templates/pages/about/includes/info_area.html
@@ -10,8 +10,8 @@
                         <div class="media">
                             <img src="{% static 'general/base/img/figure/figure6.png' %}" alt="figure">
                             <div class="media-body space-sm">
-                                <h4>Emergency Cases</h4>
-                                <span>2-800-700-6200</span>
+                                <h4>Əlaqə Nömrəsi</h4>
+                                <span>(+994)-77-303-41-14</span>
                             </div>
                         </div>
                     </div>
@@ -21,14 +21,14 @@
                 <div class="tab-content">
                     <div class="tab-pane fade active show" id="related1">
                         <div class="about-box-layout5">
-                            <h2 class="item-title">Let’s Know Short Story About Medilink Centeral Hospital.</h2>
-                            <p>Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipisc iquam class
-                                bibendum non mattis fusceut perspiciatis undeuisque. Maecenas. Eros mus.
-                                Hymenaeos eros. Nisi mauris et adipiscing. Aliquam class bibendum
-                                mattis fusceut persecenas. Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi
-                                mauris et adipisc iquam class bibendum non mattis fusceut perspiciatis
-                                undeuisque.</p>
-                            <div class="row about-img">
+                            <h2 class="item-title">Elmed Tibb Mərkəzi Haqqında Məlumat</h2>
+                            <p>Klinikamız 1 avqust 2005-ci ildə Bakı şəhəri, 9-cu mikrorayonda fəaliyyətə başlayaraq, ən son innovativ tibbi avadanlıq və cihazlarla təmin edilmişdir. Bu gün peşəkar və təcrübəli heyəti ilə Elmed Tibb Mərkəzi pasiyentlərinə yüksək keyfiyyətli və güvənli tibbi xidmət göstərən müasir səhiyyə ocağıdır.
+                                Klinikamızda son dərəcə dəqiq laboratoriya analizləri ilə laboratoriya xidmətləri, ən müasir avadanlıqlardan istifadə olunaraq Fizioterapiya, Diaqnostika və Ambulator xidmətlər göstərilir.
+                                Fəaliyyət göstərdiyimiz sahədə ən yaxşısı olmağa çalışaraq, təkcə əldə etdiyimiz nailiyyətlərimizlə kifayətlənmirik, öz imkanlarımızı davamlı olaraq genişləndiririk.
+                                </p>
+                            <br>
+                            <br>
+                            {% comment %} <div class="row about-img">
                                 <div class="col-md-6 col-12">
                                     <img src="{% static 'general/base/img/about/about5.jpg' %}" alt="about">
                                 </div>
@@ -61,7 +61,7 @@
                                 adipiscing. Aliquam class bibendum mattis fusceut persecenas.
                                 Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipisc iquam class
                                 bibendum non mattis fusceut perspiciatis undeuisque. Quisque. Maecenas. Eros
-                                mus. Hymenaeos eros.</p>
+                                mus. Hymenaeos eros.</p> {% endcomment %}
                         </div>
                     </div>
                 </div>
