--- a/templates/pages/contact/contact.html
+++ b/templates/pages/contact/contact.html
@@ -28,12 +28,12 @@
             </div>
             <div class="col-12 col-lg-4 col-xl-3">
                 <div class="contact-box-layout1 pt-0">
-                    <h3 class="title title-bar-primary4">Address</h3>
+                    <h3 class="title title-bar-primary4">Ünvan</h3>
                     <div class="contact-info">
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i>Medilink Technological Limited</li>
+                            <li><i class="fas fa-map-marker-alt"></i>Bakı şəhəri, 9-cu mikrorayon., Mir Cəlal küç., 51 C</li>
                             <li><i class="far fa-envelope"></i>example@example.com</li>
-                            <li><i class="fas fa-phone"></i>(+123) 88 44400</li>
+                            <li><i class="fas fa-phone"></i>(+994)-77-303-41-14</li>
                         </ul>
                     </div>
                 </div>
