--- a/templates/pages/home/home.html
+++ b/templates/pages/home/home.html
@@ -27,11 +27,11 @@
 {% block body %}
     {% include 'pages/home/includes/slider_area.html' %}
     {% include 'pages/home/includes/action_area.html' %}
-    {% include 'pages/home/includes/about_area.html' %}
+    {% comment %} {% include 'pages/home/includes/about_area.html' %} {% endcomment %}
     {% include 'pages/home/includes/departaments_area.html' %}
     {% include 'pages/home/includes/doctors_area.html' %}
     {% include 'pages/home/includes/blog_area.html' %}
-    {% include 'pages/home/includes/featured_area.html' %}
+    {% comment %} {% include 'pages/home/includes/featured_area.html' %} {% endcomment %}
 {% endblock body %}
 
 
