--- a/templates/pages/home/includes/action_area.html
+++ b/templates/pages/home/includes/action_area.html
@@ -5,21 +5,21 @@
             <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
                     <div class="single-item mt-2 mt-md-0">
-                        <a href="doctors1.html"><i class="flaticon-search"></i> Find Doctors</a>
+                        <a href="{% url 'doctor-list' %}"><i class="flaticon-search"></i> Həkim Tap</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
                     <div class="single-item mt-2 mt-md-0">
-                        <a href="appointment.html"><i class="fas fa-map-marker-alt"></i> Find Locations</a>
+                        <a href="https://goo.gl/maps/CFSey3fGoYJX4mtm9" target="_blank"><i class="fas fa-map-marker-alt"></i> Ünvana Bax</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
                     <div class="single-item mt-2 mt-md-0">
-                        <a href="appointment.html"><i class="far fa-calendar-alt"></i> Request Appoinment</a>
+                        <a href="{% url 'campaign-list' %}"><i class="far fa-calendar-alt"></i> Kampaniyalar</a>
                     </div>
                 </div>
             </div>
@@ -37,8 +37,9 @@
                     <div class="media media-none-md">
                         <i class="flaticon-square"></i>
                         <div class="media-body box-content">
-                            <h4 class="item-title">Opening Hours</h4>
-                            <span>Monday – Friday (8.00 – 17.00)</span>
+                            <h4 class="item-title">İş Saatları</h4>
+                            <div>Həftə İçi - 09:00 - 17:00</div>
+                            <div>Şənbə - 09:00 - 15:00</div>
                         </div>
                     </div>
                 </div>
@@ -48,8 +49,8 @@
                     <div class="media media-none-md">
                         <i class="flaticon-first-aid-kit"></i>
                         <div class="media-body box-content">
-                            <h4 class="item-title">Emergency Case</h4>
-                            <span>We Have Experienced Doctors</span>
+                            <h4 class="item-title">Laborator Analizlər</h4>
+                            <span>Hər növ kliniki müayinələr və testlər</span>
                         </div>
                     </div>
                 </div>
@@ -59,8 +60,8 @@
                     <div class="media media-none-md">
                         <i class="flaticon-phone-call"></i>
                         <div class="media-body">
-                            <h4 class="item-title">24/7 Hours Service</h4>
-                            <span>+ 88000 566677</span>
+                            <h4 class="item-title">Əlaqə Nömrəmiz</h4>
+                            <span>(+994)-77-303-41-14</span>
                         </div>
                     </div>
                 </div>
