--- a/templates/pages/home/includes/slider_area.html
+++ b/templates/pages/home/includes/slider_area.html
@@ -11,11 +11,10 @@
             <div class="slider-content s-tb slide-1">
                 <div class="text-left title-container s-tb-c">
                     <div class="container">
-                        <div class="slider-big-text padding-right">We Take Care Of Your Healthy Health</div>
-                        <p class="slider-paragraph padding-right">Mimply dummy text of the printing typesetting
-                            ipsum dolor onsecte dipiscing.</p>
+                        <div class="slider-big-text padding-right">Birlikdə daha sağlam həyat quraq! </div>
+                        <p class="slider-paragraph padding-right">Klinikamızda tətbiq olunan yüksək tibbi texnologiyalar vasitəsilə pasiyentlərin sağlamlığını tam şəkildə qoruyaraq, cəmiyyətimizə ən yaxşı xidməti göstərməyə çalışırıq.</p>
                         <div class="slider-btn-area">
-                            <a href="#" class="item-btn">Read More<i class="fas fa-chevron-right"></i></a>
+                            <a href="{% url 'about' %}" class="item-btn">Ətraflı<i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -25,18 +24,16 @@
             <div class="slider-content s-tb slide-2">
                 <div class="text-left title-container s-tb-c">
                     <div class="container">
-                        <div class="slider-big-text padding-right">We Take Care Of Your Healthy Health</div>
-                        <p class="slider-paragraph padding-right">Mimply dummy text of the printing typesetting
-                            ipsum dolor onsecte
-                            dipiscing.</p>
+                        <div class="slider-big-text padding-right">Peşəkar tibbi xidmət!</div>
+                        <p class="slider-paragraph padding-right">Peşəkar həkim heyətilə sizlərə sağlamlığınızla əlaqədar hər növ xidməti verməyə hazırıq.</p>
                         <div class="slider-btn-area">
-                            <a href="#" class="item-btn">Read More<i class="fas fa-chevron-right"></i></a>
+                            <a href="{% url 'about' %}" class="item-btn">Ətraflı<i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="slider-direction-3" class="t-cn slider-direction">
+        <!-- <div id="slider-direction-3" class="t-cn slider-direction">
             <div class="slider-content s-tb slide-3">
                 <div class="text-left title-container s-tb-c">
                     <div class="container">
@@ -45,12 +42,12 @@
                             ipsum dolor onsecte
                             dipiscing.</p>
                         <div class="slider-btn-area">
-                            <a href="#" class="item-btn">Read More<i class="fas fa-chevron-right"></i></a>
+                            <a href="#" class="item-btn">Ətraflı<i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 <!-- Slider Area End Here -->
