--- a/departament/templates/departament/departament_detail/includes/info_area.html
+++ b/departament/templates/departament/departament_detail/includes/info_area.html
@@ -3,47 +3,12 @@
 <div class="tab-content">
     <div role="tabpanel" class="tab-pane fade active show" id="department1">
         <div class="single-departments-box-layout1">
-            {% comment %} <div class="single-departments-img">
-                <img alt="single" src="{% static 'general/base/img/department/department21.jpg' %}">
-            </div> {% endcomment %}
+            
             <div class="item-content">
                 {{ departament.about | safe }}
-                {% comment %} <div class="item-content-wrap">
-                    <h3 class="item-title title-bar-primary5">Eye Department</h3>
-                    <span class="sub-title">Dorem ipsum dolor sit amet, consectetuer adipiscing
-                        elit, sed diam nonummy nibh erty cidunt utter laoreet dolore magna
-                        aliquam erat volutpanostrud exercier.</span>
-                    <p>Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipisc
-                        iquam class bibendum non mattis fusceut perspiciatis undeuisque.
-                        Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipiscing. Aliquam
-                        class
-                        bibendum mattis fusceut persecenas. Quisque. Maecenas. Eros mus.
-                        Hymenaeos eros. Nisi mauris et adipisc iquam class bibendum non mattis
-                        fusceut perspiciatis undeuisque. </p>
-                    <h3 class="item-title">Advantage:</h3>
-                    <p>Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipisc
-                        iquam class bibendum non mattis fusceut perspiciatis undeuisque.
-                        Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipiscing. Aliquam
-                        class
-                        bibendum mattis fusceut persecenas. Quisque. Maecenas. Eros mus.
-                        Hymenaeos eros. Nisi mauris et adipisc.</p>
-                    <ul class="department-info">
-                        <li>Keep Patients First Nulla lobortis.</li>
-                        <li>Keep Everyone Safe.</li>
-                        <li>Work Together Quisque pretium quam.</li>
-                        <li>Curabitur semper enim id accumsan.</li>
-                    </ul>
-                    <p>Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipisc
-                        iquam class bibendum non mattis fusceut perspiciatis undeuisque.
-                        Maecenas. Eros mus. Hymenaeos eros. Nisi mauris et adipiscing. Aliquam
-                        class
-                        bibendum mattis fusceut persecenas. Quisque. Maecenas. Eros mus.
-                        Hymenaeos eros. Nisi mauris et adipisc.Aliquam class bibendum mattis
-                        fusceut persecenas. Quisque. Maecenas. Eros mus. Hymenaeos eros. Nisi
-                        mauris et adipisc.</p>
-                </div> {% endcomment %}
+                
                 <div class="item-specialist-wrap mt-5">
-                    <h3 class="item-title title-bar-primary7">Meet Our Doctors</h3>
+                    <h3 class="item-title title-bar-primary7">{{ departament.name }} Şöbəsinin Həkimləri</h3>
                 </div>
                 <div class="row">
                    {% include 'departament/departament_detail/includes/doctors_area.html' %}
