--- a/static/general/base/css/elements.less
+++ b/static/general/base/css/elements.less
@@ -1,8 +1,8 @@
 /*=============== Color Settings =============*/
 
-@primaryColor: #396cf0;
+@primaryColor: #1ED61F;
 @lightPrimaryColor: #3c70fa;
-@darkPrimaryColor: #2055e4;
+@darkPrimaryColor: #1ED61F;
 @accentColor: #cecece;
 @colorLightPrimary: #ffffff;
 @colorLightAccent: #e3e3e3;
